src/objects/NotificatorLicense__c.object
<CustomObject>
    <fields>
        <fullName>InfoThreshold__c</fullName>
        <inlineHelpText>First notification will be sent if remaining licenses number will be below this threshold.</inlineHelpText>
        <label>Info Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <label>NotificatorSetting</label>
        <referenceTo>NotificatorSetting__c</referenceTo>
        <relationshipLabel>Notificator Licenses</relationshipLabel>
        <relationshipName>NotificatorLicenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>OK</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WarningThreshold__c</fullName>
        <inlineHelpText>Final notification will be sent if remaining licenses number will be below this threshold.</inlineHelpText>
        <label>Warning Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Notificator License</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notificator Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Info_positive</fullName>
        <active>true</active>
        <errorConditionFormula>InfoThreshold__c &lt; 0</errorConditionFormula>
        <errorDisplayField>InfoThreshold__c</errorDisplayField>
        <errorMessage>Info Threshold must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warning_less_Info</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(WarningThreshold__c &lt;  InfoThreshold__c)</errorConditionFormula>
        <errorDisplayField>WarningThreshold__c</errorDisplayField>
        <errorMessage>Warning Threshold must be lesser than Info Threshold.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warning_positive</fullName>
        <active>true</active>
        <errorConditionFormula>WarningThreshold__c &lt; 0</errorConditionFormula>
        <errorDisplayField>WarningThreshold__c</errorDisplayField>
        <errorMessage>Warning Threshold must be positive</errorMessage>
    </validationRules>
</CustomObject>